GDHI-89 Fix overflow and height issue for bar graph <Lahari/Arjun>

--- a/src/components/graphs/region-bar-graph/region-bar-graph.scss
+++ b/src/components/graphs/region-bar-graph/region-bar-graph.scss
@@ -1,11 +1,10 @@
 .graph-container {
-  height: 850px;
+  height: 750px;
   width: var(--width);
 }
-
 .graph {
   height: 900px;
-  width: 1600px;
+  width: 100%;
   overflow-x: auto;
   overflow-y: hidden;
 }
